[gd_scene load_steps=31 format=2]

[ext_resource path="res://GUI_New/Mansion/MansionBottomLeftModule.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI_New/Mansion/MansionSlaveListModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI_New/Mansion/MansionJobModule.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI_New/Mansion/MansionLogModule.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI_New/Mansion/MansionSlaveModule.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI_New/Mansion/MansionMainModule.gd" type="Script" id=8]
[ext_resource path="res://GUI_New/Mansion/MansionSkillsModule.tscn" type="PackedScene" id=9]
[ext_resource path="res://GUI_New/Mansion/MansionTravelsModule.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Theme.tres" type="Theme" id=13]
[ext_resource path="res://GUI_New/Mansion/MansionUpgradesModule.tscn" type="PackedScene" id=17]
[ext_resource path="res://GUI_New/Mansion/MansionTaskInfoModule.tscn" type="PackedScene" id=19]
[ext_resource path="res://GUI_New/Mansion/MansionLocationsModule.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/Textures_v2/MANSION/mansion.png" type="Texture" id=22]
[ext_resource path="res://assets/Themes_v2/MANSION/M_Left_Menu.tres" type="Theme" id=23]
[ext_resource path="res://assets/Themes_v2/MANSION/M_Left_Menu_Panel.tres" type="StyleBox" id=24]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=25]
[ext_resource path="res://assets/images/tutorial.png" type="Texture" id=26]
[ext_resource path="res://GUI_New/Mansion/MansionCraftModule.tscn" type="PackedScene" id=27]
[ext_resource path="res://GUI_New/Mansion/MansionCraftSmallModule.tscn" type="PackedScene" id=28]
[ext_resource path="res://GUI_New/Mansion/InteractionMainModule.tscn" type="PackedScene" id=30]
[ext_resource path="res://GUI_New/Mansion/MansionSexSelectionModule.tscn" type="PackedScene" id=32]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_24.tres" type="DynamicFont" id=34]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_menu_pressed.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_menu_hover.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_menu.png" type="Texture" id=37]
[ext_resource path="res://GUI_New/Mansion/MansionJournalModule.tscn" type="PackedScene" id=38]
[ext_resource path="res://src/date.tscn" type="PackedScene" id=39]
[ext_resource path="res://GUI_New/Universal/NavigationModule.tscn" type="PackedScene" id=41]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="ShaderMaterial" id=2]

[node name="MansionMainModule" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MansionBottomLeftModule" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )
margin_left = 15.0
margin_top = 678.0
margin_right = 305.0
margin_bottom = 1063.0
rect_min_size = Vector2( 290, 385 )
theme = ExtResource( 23 )
custom_styles/panel = ExtResource( 24 )

[node name="MansionSlaveListModule" parent="." instance=ExtResource( 4 )]
margin_left = 320.0
margin_top = 85.0
margin_right = 1420.0
margin_bottom = 930.0
rect_min_size = Vector2( 1100, 580 )

[node name="MansionJobModule" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 320.0
margin_top = 680.0
margin_right = 1420.0
margin_bottom = 400.0
rect_min_size = Vector2( 1100, 385 )

[node name="MansionLogModule" parent="." instance=ExtResource( 6 )]
margin_left = 1435.0
margin_top = 85.0
margin_right = 1905.0
margin_bottom = 385.0
rect_min_size = Vector2( 470, 300 )

[node name="MansionSlaveModule" parent="." instance=ExtResource( 7 )]
margin_left = 1435.0
margin_top = 398.0
margin_right = 1905.0
margin_bottom = 1063.0

[node name="MansionSkillsModule" parent="." instance=ExtResource( 9 )]
margin_left = 320.0
margin_top = 948.0
margin_right = 319.84
margin_bottom = 937.32

[node name="MansionTravelsModule" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 320.0
margin_top = 680.0
margin_right = 1420.0
margin_bottom = 1065.0

[node name="MansionLocationsModule" parent="." instance=ExtResource( 21 )]
margin_left = 320.0
margin_top = 85.0
margin_right = -500.0
margin_bottom = -417.0

[node name="MansionUpgradesModule" parent="." instance=ExtResource( 17 )]
visible = false
margin_left = 320.0
margin_top = 680.0
margin_right = 1420.0
margin_bottom = 1065.0

[node name="MansionTaskInfoModule" parent="." instance=ExtResource( 19 )]
margin_left = 15.0
margin_top = 253.0
margin_right = 305.0
margin_bottom = 678.0

[node name="NavigationModule" parent="." instance=ExtResource( 41 )]
margin_left = 320.0
margin_top = 15.0
margin_right = -150.0
margin_bottom = -1010.0

[node name="MansionCraftModule" parent="." instance=ExtResource( 27 )]
visible = false
margin_left = 320.0
margin_top = 85.0
margin_right = 1420.0
margin_bottom = 1065.0

[node name="MansionCraftSmallModule" parent="." instance=ExtResource( 28 )]
visible = false
margin_left = 320.0
margin_top = 745.0
margin_right = 1420.0
margin_bottom = 1063.0

[node name="TestButton" type="Button" parent="."]
visible = false
margin_left = 1396.24
margin_top = 26.3459
margin_right = 1458.24
margin_bottom = 56.3459
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionMainModule" parent="." instance=ExtResource( 30 )]

[node name="MansionSexSelectionModule" parent="." instance=ExtResource( 32 )]
margin_left = 320.0
margin_top = 948.0
margin_right = -500.0
margin_bottom = -12.0

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 1785.0
margin_top = 15.0
margin_right = 1901.0
margin_bottom = 69.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuButton"]
margin_right = 116.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 34 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Menu"
align = 1
valign = 1

[node name="MansionJournalModule" parent="." instance=ExtResource( 38 )]
visible = false
margin_left = 530.0
margin_top = 140.0
margin_right = 1390.0
margin_bottom = 940.0

[node name="date" parent="." instance=ExtResource( 39 )]
visible = false

[node name="TutorialButton" type="Button" parent="."]
margin_left = 1718.0
margin_top = 17.0
margin_right = 1769.0
margin_bottom = 69.0
theme = ExtResource( 13 )
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorialpanel" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.992157 )
margin_left = 169.0
margin_top = 54.0
margin_right = 1799.0
margin_bottom = 1012.0
texture = ExtResource( 26 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="tutorialpanel"]
self_modulate = Color( 1, 1, 1, 0.796078 )
show_behind_parent = true
margin_left = -178.0
margin_top = -63.0
margin_right = 1758.0
margin_bottom = 1032.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Panel" parent="tutorialpanel"]
show_behind_parent = true
margin_left = -9.0
margin_top = 9.0
margin_right = 1640.0
margin_bottom = 948.0
theme = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="tutorialpanel"]
margin_left = 853.901
margin_top = 963.607
margin_right = 1095.9
margin_bottom = 1012.61
theme = ExtResource( 13 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="tutorialpanel"]
margin_left = 633.819
margin_top = 972.949
margin_right = 815.819
margin_bottom = 996.949
text = "F1 to open again"
[connection signal="pressed" from="TestButton" to="." method="_on_TestButton_pressed"]
